--- a/frontend/src/component/layout/About/About.css
+++ b/frontend/src/component/layout/About/About.css
@@ -44,12 +44,13 @@
     float: right;
     width: 40%;
     position: relative;
-    top: 0;
+    top: -1;
     left: 0;
 }
 .image-section img {
-    width: 100%;
-    height: 500px;
+    margin-top: 70px;
+    width: 400px;
+    height: 400px;
     border-radius: 50%;
     position: relative;
   top: 0;
